--- a/Jenkins.yml
+++ b/Jenkins.yml
@@ -1,29 +1,34 @@
   yml
         pipeline {
         agent any-with-jdk8-maven-curl-unzip
+
+	stage('Veracode Upload and Scan')
+ 	{
+	veracode applicationName: '$projectname',createSandbox: true, criticality: 'VeryHigh', debug: true, fileNamePattern: '', replacementPattern: '', sandboxName: '$projectname', scanExcludesPattern: '', scanIncludesPattern: '', scanName: '', teams: '', uploadExcludesPattern: '', uploadIncludesPattern: '**/**.war', useIDkey: true, version:'$USAT_VERSION', vid: 'ID', vkey: 'KEY', vpassword: '', vuser: ''
+	}
         stages {
-        stage('Maven Build') {
-        steps {
-        - sh 'mvn clean install'
+          stage('Maven Build') {
+          steps {
+            - sh 'mvn clean install'
+          }
         }
-        }
-        stage('Veracode Pipeline Scan') {
-        steps {
-        - sh `curl -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip`
-        - sh `unzip pipeline-scan-LATEST.zip pipeline-scan.jar`
-        - sh `java -jar pipeline-scan.jar \
-        --veracode_api_id "${VERACODE_API_ID}" \
-        --veracode_api_key "${VERACODE_API_SECRET}" \
-        --file "build/libs/sample.jar" \
-        --fail_on_severity="Very High, High" \
-        --fail_on_cwe="80" \
-        --baseline_file "${CI_BASELINE_PATH}" \
-        --timeout "${CI_TIMEOUT}" \
-        --project_name "${env.JOB_NAME}" \
-        --project_url "${env.GIT_URL}" \
-        --project_ref "${env.GIT_COMMIT}" \
-        }
-        }
+          stage('Veracode Pipeline Scan') {
+          steps {
+          - sh `curl -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip`
+          - sh `unzip pipeline-scan-LATEST.zip pipeline-scan.jar`
+          - sh `java -jar pipeline-scan.jar \
+          --veracode_api_id "${VERACODE_API_ID}" \
+          --veracode_api_key "${VERACODE_API_SECRET}" \
+          --file "build/libs/sample.jar" \
+          --fail_on_severity="Very High, High" \
+          --fail_on_cwe="80" \
+          --baseline_file "${CI_BASELINE_PATH}" \
+          --timeout "${CI_TIMEOUT}" \
+          --project_name "${env.JOB_NAME}" \
+          --project_url "${env.GIT_URL}" \
+          --project_ref "${env.GIT_COMMIT}" \
+            }
+          }
         }
         post {
         always {
