--- a/Jenkins.yml
+++ b/Jenkins.yml
@@ -4,7 +4,10 @@
 
 	stage('Veracode Upload and Scan')
  	{
-	veracode applicationName: '$projectname',createSandbox: true, criticality: 'VeryHigh', debug: true, fileNamePattern: '', replacementPattern: '', sandboxName: '$projectname', scanExcludesPattern: '', scanIncludesPattern: '', scanName: '', teams: '', uploadExcludesPattern: '', uploadIncludesPattern: '**/**.war', useIDkey: true, version:'$USAT_VERSION', vid: 'ID', vkey: 'KEY', vpassword: '', vuser: ''
+	veracode applicationName: '$projectname',createSandbox: true, criticality: 'VeryHigh', debug: true, fileNamePattern: '', replacementPattern: '', 
+sandboxName: '$projectname', scanExcludesPattern: '', scanIncludesPattern: '', scanName: '$timestamp', teams: '', uploadExcludesPattern: '', 
+uploadIncludesPattern: 
+'**/**.war', useIDkey: false, version:'$USAT_VERSION', vid: '$VERACODE_API_ID', vkey: '$VERACODE_API_KEY'
 	}
         stages {
           stage('Maven Build') {
@@ -19,9 +22,8 @@
           - sh `java -jar pipeline-scan.jar \
           --veracode_api_id "${VERACODE_API_ID}" \
           --veracode_api_key "${VERACODE_API_SECRET}" \
-          --file "build/libs/sample.jar" \
-          --fail_on_severity="Very High, High" \
-          --fail_on_cwe="80" \
+          --file "app/target/verademo.war" \
+          --fail_on_severity="Very High" \
           --baseline_file "${CI_BASELINE_PATH}" \
           --timeout "${CI_TIMEOUT}" \
           --project_name "${env.JOB_NAME}" \
