--- a/.github/workflows/master_build.yml
+++ b/.github/workflows/master_build.yml
@@ -3,7 +3,7 @@ name: Veracode Scan Master
 on:
   push:
     branches:
-      - master
+      - main2
   schedule:
     # Running scan at 00:00 on Sunday every week
     - cron: '0 0 * * 0'
@@ -28,7 +28,7 @@ jobs:
         java-version: 1.8
     
     - name: Build with Maven
-      run: mvn -B packaage ~/app/pom.xml
+      run: mvn -B package ~/app/pom.xml
     
     - name: Download Java Wrapper
       run: |
