modified:   Jenkins.yml

--- a/Jenkins.yml
+++ b/Jenkins.yml
@@ -9,7 +9,7 @@
         stages {
           stage('Maven Build') {
           steps {
-            - sh 'mvn clean install'
+            - sh 'maven clean install'
           }
         }
           stage('Veracode Pipeline Scan') {
