--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -6,8 +6,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: build
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+      - name: Build with Maven
         run: mvn clean install
+      #- name: build
+        
+       # run: mvn clean install
   baseline:
     runs-on: ubuntu-latest
     steps:
@@ -27,7 +36,7 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: baseline
-          path: baseline.json
+          path: ~/baseline/baseline.json
   baseline-scan:
     runs-on: ubuntu-latest
     needs: baseline
