--- a/.github/workflows/pipelining.yml
+++ b/.github/workflows/pipelining.yml
@@ -23,7 +23,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B clean package --file app/pom.xml
+      run: mvn clean install ~/app/pom.xml
     - name: Veracode Upload And Scan
       # You may pin to the exact commit or the version.
       # uses: veracode/veracode-uploadandscan-action@c1ac3694a8ecfbe360fa7ae0b7e1367256259501
