--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -21,7 +21,7 @@ jobs:
           java-version: '8'
 
       - name: Build with Maven
-        run: mvn -B package --file /app/pom.xml
+        run: mvn -B package --file /.m2/app/target/pom.xml
 
       - uses: actions/upload-artifact@v2 # Copy files from repository to docker container so the next uploadandscan action can access them.
         with:
@@ -29,9 +29,9 @@ jobs:
       - name: Veracode Software Composition Analysis
         env:
           SRCCLR_API_TOKEN: ${{ secrets.SRCCLR_API_TOKEN }}
- #       run: |
- #        curl -sSL https://download.sourceclear.com/ci.sh | sh -s -- scan --debug --allow-dirty
-        uses: Lerer/veracode-sca@v1.0.6
+          run: |
+            curl -sSL https://download.sourceclear.com/ci.sh | sh -s -- scan --debug --allow-dirty
+        uses: mokkang/verademo-sca@v2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           quick: false
@@ -39,4 +39,7 @@ jobs:
           create-issues: true 
           fail-on-cvss: 1
           min-cvss-for-issue: 1
-#         path: '**/*.war'
+          path: '~/app/target/verademo.war'
+    
+        
+            
