--- a/.github/workflows/master_build.yml
+++ b/.github/workflows/master_build.yml
@@ -4,9 +4,9 @@ on:
   push:
     branches:
       - main2
-  schedule:
+  #schedule:
     # Running scan at 00:00 on Sunday every week
-    - cron: '0 0 * * 0'
+    #- cron: '0 0 * * 0'
 
 env:
   JAVA_WRAPPER_VERSION: "20.3.6.1" # Update the version when new version is released.
