--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -4,8 +4,8 @@ on:
   push:
     paths-ignore:
       - "README.md"
-  schedule:
-    - cron: 15 14 * * 6
+ # schedule:
+ #   - cron: 15 14 * * 6
 
 jobs:
   veracode-sca-task:
