--- a/.github/workflows/java-maven.yml
+++ b/.github/workflows/java-maven.yml
@@ -34,10 +34,10 @@ jobs:
       - name: Veracode Software Composition Analysis
           # You may pin to the exact commit or the version.
           # uses: Lerer/veracode-sca@661e856c8b6a720ad6e1e430a9d2300b78b5d381
-        uses: Lerer/veracode-sca@v1.0.8
+        uses: mokkang/verademo-jenkins@v2
         with:
           # Authorization token to query and create issues
-           # github_token: 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
+            github_token: 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
           # 
            # quick: # optional, default is false
           # Show update advisor
