--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -1,42 +1,34 @@
-name: Veracode SCA Scan
-#
-on: 
-  push:
-    paths-ignore:
-      - "README.md"
- # schedule:
- #   - cron: 15 14 * * 6
 
-jobs:
-  veracode-sca-task:
-    runs-on: ubuntu-latest
-    name: Scan repository for Issues
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/setup-java@v1 # Make java accessible on path so the uploadandscan action can run.
-        with: 
-          java-version: '8'
-
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
-
-      - uses: actions/upload-artifact@v2 # Copy files from repository to docker container so the next uploadandscan action can access them.
-        with:
-          path: '**/*.war' # Wildcards can be used to filter the files copied into the container. See: https://github.com/actions/upload-artifact
-      - name: Veracode Software Composition Analysis
-        env:
-          SRCCLR_API_TOKEN: ${{ secrets.SRCCLR_API_TOKEN }}
- #       run: |
- #        curl -sSL https://download.sourceclear.com/ci.sh | sh -s -- scan --debug --allow-dirty
-        uses: Lerer/veracode-sca@v1.0.6
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          quick: false
-          debug: false
-          create-issues: true 
-          fail-on-cvss: 1
-          min-cvss-for-issue: 1
-#         path: '**/*.war'
+- name: Veracode Software Composition Analysis
+          # You may pin to the exact commit or the version.
+  uses: Lerer/veracode-sca@661e856c8b6a720ad6e1e430a9d2300b78b5d381
+        #uses: mokkang/verademo-jenkins@v2
+  with:
+       # Authorization token to query and create issues
+      github_token: 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
+          # 
+           # quick: # optional, default is false.  
+          # Show update advisor
+      update_advisor: true # optional, default is false
+           # A git URL to work with in case the scan is not for the current repository
+            #url: # optional, default is 
+            # The minimum CVSS value for vulnerability to be added as an issue
+            #min-cvss-for-issue: # optional, default is 0
+            # The maximum allowed cvss in found vulnerabilities to pass the step
+            #fail-on-cvss: # optional, default is 10
+            # An attribute to instruct the action to create an issue from found vulnerability or just simple text output
+            #create-issues: # optional, default is false
+            # A path within the repository where the build definition starts
+            #path: # optional, default is .
+            # Run the SRCCLR in debug mode
+            #debug: # optional, default is false
+            # Run the SRCCLR with the `--skip-collectors` options
+            #skip-collectors: # optional, default is false
+            # Run the SRCCLR with the `--allow-dirty` option
+      allow-dirty: true # optional, default is false
+            # Run the SRCCLR with the `--recursive` option
+      recursive: true # optional, default is false
+      uses: Lerer/veracode-sca@661e856c8b6a720ad6e1e430a9d2300b78b5d381
+      name: post action
+      with: Lerer/veracode-sca@661e856c8b6a720ad6e1e430a9d2300b78b5d381
+        mvn: mvn com.srcclr:srcclr-maven-plugin:scan
