--- a/.github/workflows/java-maven.yml
+++ b/.github/workflows/java-maven.yml
@@ -32,3 +32,40 @@ jobs:
 #          include: '*.war'
           criticality: 'VeryHigh'
       
+#steps:
+      - name: SCA
+      
+          
+          
+        #name: Veracode Software Composition Analysis
+        #on: static success
+                  # You may pin to the exact commit or the version.
+        uses: Lerer/veracode-sca@661e856c8b6a720ad6e1e430a9d2300b78b5d381
+                #uses: mokkang/verademo-jenkins@v2
+        with:
+               # Authorization token to query and create issues
+           github_token: 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
+                  # 
+                   # quick: # optional, default is false.  
+                  # Show update advisor
+           update_advisor: true # optional, default is false
+                   # A git URL to work with in case the scan is not for the current repository
+                    #url: # optional, default is 
+                    # The minimum CVSS value for vulnerability to be added as an issue
+                    #min-cvss-for-issue: # optional, default is 0
+                    # The maximum allowed cvss in found vulnerabilities to pass the step
+                    #fail-on-cvss: # optional, default is 10
+                    # An attribute to instruct the action to create an issue from found vulnerability or just simple text output
+                    #create-issues: # optional, default is false
+                    # A path within the repository where the build definition starts
+                    #path: # optional, default is .
+                    # Run the SRCCLR in debug mode
+                    #debug: # optional, default is false
+                    # Run the SRCCLR with the `--skip-collectors` options
+                    #skip-collectors: # optional, default is false
+                    # Run the SRCCLR with the `--allow-dirty` option
+           allow-dirty: true # optional, default is false
+                    # Run the SRCCLR with the `--recursive` option
+           recursive: true # optional, default is false
+           srcclr: mvn com.srcclr:srcclr-maven-plugin:scan
+
