modified:   Dockerfile 	modified:   app/veracode.properties 	.classpath 	.project 	.settings/ 	app/.classpath 	app/.project 	app/.settings/ 	app/veracode_20220525-174818482.log 	app/veracode_20220525-175002640.log 	app/veracode_20220526-240237107.log 	app/veracode_20220531-92559655.log 	demo.json 	docker-entrypoint.sh 	docker.txt 	filtered_results.json 	output.json

--- a/app/veracode.properties
+++ b/app/veracode.properties
@@ -19,7 +19,7 @@
              # binaries will be uploaded to. It is case-sensitive and must match an existing
              # application profile name if createprofile=false.
              # Value Data Type -> String
-             appname="sca-verademo"
+             appname="verademo_version3"
              
              # Path to the final packages binary (.JAR, .WAR, .ZIP, etc). Optionally, a
              # top-level folder can be specified and the script will upload all binaries in
@@ -28,7 +28,7 @@
              # Multiple files can be assigned to file path separated by space
              
              # Path Data Type -> String(s)
-	     filepath="//Users//jmok//DEMO-JAVA//verademo//app//target//verademo.war"
+	     filepath="//Users//jmok//Verademo-jenkins//app//target//verademo.war"
 #             filepath="\\Users\\jmok\\git\\DEMO-JAVA\\verademo\\app\\target\\verademo.war"            
              # API ID and Key
              vid="dd8a37f63ef2ecdbdf6e806195007d0f"
