--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -31,7 +31,7 @@ jobs:
           SRCCLR_API_TOKEN: ${{ secrets.SRCCLR_API_TOKEN }}
           run: |
             curl -sSL https://download.sourceclear.com/ci.sh | sh -s -- scan --debug --allow-dirty
-        uses: mokkang/verademo-sca@v2
+        uses: veracode/veracode-sca@v1.09
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           quick: false
