--- a/.github/workflows/sxca.yml
+++ b/.github/workflows/sxca.yml
@@ -31,9 +31,9 @@ jobs:
           SRCCLR_API_TOKEN: ${{ secrets.SRCCLR_API_TOKEN }}
           run: |
             curl -sSL https://download.sourceclear.com/ci.sh | sh -s -- scan --debug --allow-dirty
-        uses: veracode/veracode-sca@v1.09
+        uses: veracode/veracode-sca@v1.0.9
         with:
-          github_token: ${{ secrets.GIT_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           quick: false
           debug: false
           create-issues: true 
