--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -2,10 +2,7 @@ name: Veracode SCA Scan
 #
 on: 
   push:
-    paths-ignore:
-      - "README.md"
-  schedule:
-    - cron: 15 14 * * 6
+  
 
 jobs:
   veracode-sca-task:
@@ -29,14 +26,15 @@ jobs:
       - name: Veracode Software Composition Analysis
         env:
           SRCCLR_API_TOKEN: ${{ secrets.SRCCLR_API_TOKEN }}
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          quick: false
-          debug: false
-          create-issues: true 
-          fail-on-cvss: 1
-            
         run: |
          curl -sSL https://download.sourceclear.com/ci.sh | sh -s -- scan --debug --allow-dirty
-        #uses: veracode/veracode-sca@v1.0.9
+      - name: GHACtion
+        uses: veracode/veracode-sca@v1.0.9
+        with:
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+            quick: false
+            debug: false
+            create-issues: true 
+            fail-on-cvss: 1
             #min-cvss-for-issue: 1
   #       path: '**/*.war'
