--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -18,7 +18,7 @@ jobs:
           java-version: '8'
 
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn -B package --file ./app/pom.xml
 
       - uses: actions/upload-artifact@v2 # Copy files from repository to docker container so the next uploadandscan action can access them.
         with:
