--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -27,7 +27,7 @@ jobs:
         env:
           SRCCLR_API_TOKEN: ${{ secrets.SRCCLR_API_TOKEN }}
         run: |
-         curl -sSL https://download.sourceclear.com/ci.sh | sh -s -- scan --debug --allow-dirty
+         curl -sSL https://download.sourceclear.com/ci.sh | sh -s -- scan --allow-dirty --update-advisor
       - name: GHACtion
         uses: veracode/veracode-sca@v1.0.8
         with:
