--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -17,8 +17,8 @@ jobs:
           java-version: '8'
 
       - name: Build with Maven
-        run: mvn -B package --file ./app/pom.xml
-          mvn clean install dependency:tree
+        run: mvn clean install dependency:tree && mvn -B package --file ./app/pom.xml
+          
 
       - uses: actions/upload-artifact@v2 # Copy files from repository to docker container so the next uploadandscan action can access them.
         with:
@@ -27,7 +27,6 @@ jobs:
         env:
           SRCCLR_API_TOKEN: ${{ secrets.SRCCLR_API_TOKEN }}
         run: |
-
          curl -sSL https://download.sourceclear.com/ci.sh | sh -s -- scan --allow-dirty --update-advisor
       - name: GHACtion
         uses: veracode/veracode-sca@v1.0.8
