--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Build with Maven
         run: |
-          mvn clean install dependency:tree 
+          #mvn clean install dependency:tree .
           mvn -B package --file ./app/pom.xml
           
 
