--- a/cJenkins.yml
+++ b/cJenkins.yml
@@ -1,59 +1,50 @@
-{
-pipeline ('Maven')    
-    
-    
-    agent any
-    tools {
-        maven 'Maven 3.3.9'
-        jdk 'jdk8'
-        },
-    stages 
-            stage ('Initialize') 
-            steps {
-                echo "PATH = ${{ $PATH }}"
-                echo "M2_HOME = ${ M2_HOME }"
-                
-            }
-        }
+pipeline {
+   agent any
 
-            stage ('Build') {
-            steps {
-                sh 'mvn -Dmaven.test.failure.ignore=true install' 
+   stages {
+      stage('Verify Branch') {
+         steps {
+            echo "$GIT_BRANCH"
+         }
+      }
+      stage('Package') {
+         steps {
+            echo "package"
+            sh (script: """
+                mvn -f app/pom.xml package
+                pwd
+            """)  
             }
-            post {
-                success {
-                    junit 'target/surefire-reports/**/*.xml' 
-                }
-            }
- }  
-	stage ('Veracode Upload and Scan') {
- 	{
-	veracode applicationName: '$projectname',createSandbox: true, criticality: 'VeryHigh', debug: true, fileNamePattern: '', replacementPattern: '', sandboxName: '$projectname', scanExcludesPattern: '', scanIncludesPattern: '', scanName: '$timestamp', teams: '', uploadExcludesPattern: '', uploadIncludesPattern: '**/**.war', useIDkey: false, version:'$USAT_VERSION', vid: '$VERACODE_API_ID', vkey: '$VERACODE_API_KEY'
-	
-    stages {
-        stage ('Maven Build') {
-        steps {
-          - sh 'maven clean install'
-          }
-        }
-        stage ('Veracode Pipeline Scan') {
-        steps {
-          - sh `curl -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip`
-          - sh `unzip pipeline-scan-LATEST.zip pipeline-scan.jar`
-          - sh `java -jar pipeline-scan.jar \
-          --veracode_api_id "${VERACODE_API_ID}" \
-          --veracode_api_key "${VERACODE_API_SECRET}" \
-          --file "app/target/verademo.war" \
-          --fail_on_severity="Very High" \
-          --baseline_file "${CI_BASELINE_PATH}" \
-          --timeout "${CI_TIMEOUT}" \
-          --project_name "${env.JOB_NAME}" \
-          --project_url "${env.GIT_URL}" \
-          --project_ref "${env.GIT_COMMIT}" \
-            }
-          }
-        }
-     
-        }
-          }
-          }
+      }
+      stage ('Veracode pipeline scan') {
+         steps {
+            echo 'Veracode Pipeline scanning'
+            withCredentials([ usernamePassword ( 
+               credentialsId: 'veracode_login', usernameVariable: 'VERACODE_API_ID', passwordVariable: 'VERACODE_API_KEY') ]) {
+                  script {
+                     // this try-catch block will show the flaws in the Jenkins log, and yet not
+                     // fail the build due to any flaws reported in the pipeline scan
+                     // alternately, you could add --fail_on_severity '', but that would not show the
+                     // flaws in the Jenkins log
+                     // issue_details true: add flaw details to the results.json file
+                     try {
+                           sh """
+                              curl https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip -o pipeline-scan.zip
+                              unzip -u pipeline-scan.zip pipeline-scan.jar
+                              java -jar pipeline-scan.jar --veracode_api_id '${VERACODE_API_ID}' --veracode_api_key '${VERACODE_API_KEY}' --file app/target/verademo.war --baseline results.json --issue_details true
+                           """
+                     } catch (err) {
+                        echo 'The error code is ' + err.getMessage().substring(26)
+                       }
+                     }    
+               } 
+            echo "Pipeline scan done (failures ignored, results available in ${WORKSPACE}/results.json)"
+         }
+      }
+   }
+   post {
+      always {
+         archiveArtifacts artifacts: 'app/target/*.war, results.json', followSymlinks: false
+      }
+   }
+}
